tests/build/cases/widget/name_conflict2.stderr
error[E0428]: the name `foo` is defined multiple times
 --> cases/widget/name_conflict2.rs:9:1
  |
4 | pub mod foo {
  | ----------- previous definition of the module `foo` here
...
9 | pub mod foo {
  | ^^^^^^^^^^^ `foo` redefined here
  |
  = note: `foo` must be defined only once in the type namespace of this module

error[E0428]: the name `__wgt__foo__` is defined multiple times
 --> cases/widget/name_conflict2.rs:8:1
  |
3 | #[widget($crate::foo)]
  | ---------------------- previous definition of the macro `__wgt__foo__` here
...
8 | #[widget($crate::foo)]
  | ^^^^^^^^^^^^^^^^^^^^^^ `__wgt__foo__` redefined here
  |
  = note: `__wgt__foo__` must be defined only once in the macro namespace of this module
  = note: this error originates in the attribute macro `widget` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0252]: the name `foo` is defined multiple times
 --> cases/widget/name_conflict2.rs:8:1
  |
3 | #[widget($crate::foo)]
  | ---------------------- previous import of the macro `foo` here
...
8 | #[widget($crate::foo)]
  | ^^^^^^^^^^^^^^^^^^^^^^ `foo` reimported here
  |
  = note: `foo` must be defined only once in the macro namespace of this module
  = note: this error originates in the attribute macro `widget` (in Nightly builds, run with -Z macro-backtrace for more info)
help: you can use `as` to change the binding name of the import
  |
8 | #[widget($crate::foo)] as other_foo
  |

error[E0659]: `__wgt__foo__` is ambiguous
 --> cases/widget/name_conflict2.rs:8:1
  |
8 | #[widget($crate::foo)]
  | ^^^^^^^^^^^^^^^^^^^^^^ ambiguous name
  |
  = note: ambiguous because of multiple potential import sources
note: `__wgt__foo__` could refer to the macro defined here
 --> cases/widget/name_conflict2.rs:8:1
  |
8 | #[widget($crate::foo)]
  | ^^^^^^^^^^^^^^^^^^^^^^
note: `__wgt__foo__` could also refer to the macro defined here
 --> cases/widget/name_conflict2.rs:3:1
  |
3 | #[widget($crate::foo)]
  | ^^^^^^^^^^^^^^^^^^^^^^
  = note: this error originates in the attribute macro `widget` (in Nightly builds, run with -Z macro-backtrace for more info)
